refactor: resolve warnings