@@ -48,25 +48,25 @@ public class Invoker {
 				if(method.isAnnotationPresent(GetMapping.class) && httpMethod.equals("GET")){
 					GetMapping getAnnotation = method.getAnnotation(GetMapping.class);
 					if(getAnnotation.route().equals(methodRoute)){
-						result = (JsonObject) method.invoke(clazz.getConstructor(null).newInstance(), msg.getBody());
+						result = (JsonObject) method.invoke(clazz.getConstructor().newInstance(), msg.getBody());
 					}
 				}
 				else if(method.isAnnotationPresent(PostMapping.class) && httpMethod.equals("POST")){
 					PostMapping getAnnotation = method.getAnnotation(PostMapping.class);
 					if(getAnnotation.route().equals(methodRoute)){
-						result = (JsonObject) method.invoke(clazz.getConstructor(null).newInstance(), msg.getBody());
+						result = (JsonObject) method.invoke(clazz.getConstructor().newInstance(), msg.getBody());
 					}
 				}
 				else if(method.isAnnotationPresent(PutMapping.class) && httpMethod.equals("PUT")){
 					PutMapping getAnnotation = method.getAnnotation(PutMapping.class);
 					if(getAnnotation.route().equals(methodRoute)){
-						result = (JsonObject) method.invoke(clazz.getConstructor(null).newInstance(), msg.getBody());
+						result = (JsonObject) method.invoke(clazz.getConstructor().newInstance(), msg.getBody());
 					}
 				}
 				else if(method.isAnnotationPresent(DeleteMapping.class) && httpMethod.equals("DELETE")){
 					DeleteMapping getAnnotation = method.getAnnotation(DeleteMapping.class);
 					if(getAnnotation.route().equals(methodRoute)){
-						result = (JsonObject) method.invoke(clazz.getConstructor(null).newInstance(), msg.getBody());
+						result = (JsonObject) method.invoke(clazz.getConstructor().newInstance(), msg.getBody());
 					}
 				}
 			}
